# SKFlatAnalyzer

./: CMakeLists.txt  README.md  hists.root  setup.sh  signal.root  temp.txt  test.ipynb
AnalyzerTools/: CMakeLists.txt
Analyzers/: CMakeLists.txt
Analyzers/include/: AnalyzerCore.h  Analyzers_LinkDef.h  DataPreprocess.h  DiLeptonBase.h  MeasFakeRateV2.h  MeasFakeRateV4.h  MeasTrigEff.h  TriLeptonBase.h
Analyzers/src/: AnalyzerCore.C  DataPreprocess.C  DiLeptonBase.C  MeasTrigEff.C  TriLeptonBase.C
DataFormats/include/: Jet.h
DataFormats/src/: Jet.C  Muon.C
PyAnalyzers/: AcceptanceStudy.py  CR_DiLepton.py  ClosDiLepTrigs.py  ClosFakeRate.py  ClosTriLepTrigs.py  GenKinematics.py  JetIDandTaggingStudy.py  MatrixSelector.py  MatrixSkimmer.py  MeasConvMatrix.py  MeasConvMatrixV3.py  MeasConversion.py  MeasConversionV3.py  PromptSelector.py  PromptSkimmer.py  PromptUnbinned.py  TriLeptons.py
PyAnalyzers/BackUps/: MatrixEstimator.py  MeasConvMatrix.py  MeasConvMatrixV2.py  MeasConversionV2.py  PromptEstimator.py
SampleLists/: bkgSamples.txt  signalSamples.txt  triLepSamples.txt  trigSamples.txt
data/Run2UltraLegacy_v3/2016postVFP/Sample/: SampleSummary_MC.txt
data/Run2UltraLegacy_v3/2016postVFP/Sample/CommonSampleInfo/: TTToHcToWAToMuMu_MHc-100_MA-15.txt  TTToHcToWAToMuMu_MHc-100_MA-60.txt  TTToHcToWAToMuMu_MHc-100_MA-95.txt  (+11 more)
data/Run2UltraLegacy_v3/2016preVFP/Sample/: SampleSummary_MC.txt
data/Run2UltraLegacy_v3/2017/Sample/: SampleSummary_MC.txt
data/Run2UltraLegacy_v3/2018/Sample/: SampleSummary_MC.txt
lib/: libAnalyzerTools.dylib  libAnalyzers.dylib  libDataFormats.dylib  libGEScaleSyst.dylib
notebooks/: test.ipynb
python/: SKFlat.py  Submission.py
python/MLTools/: formats.py  helpers.py  models.py
script/: build.sh  install_lhapdf.sh
script/SubmitAnalyzers/: AcceptanceStudy.sh  CR_DiLepton.sh  ClosFakeRate.sh  ClosTrigEffi.sh  Conversion.sh  DataPreprocess.sh  JetIDandTaggingStudy.sh  MeasConversionV2.sh  MeasConversionV3.sh  MeasTrigEff.sh  Selector.sh  Skimmer.sh  TriLepons.sh
script/Templates/Submission/: condor.sub  run.python.sh  run.sh
(+1022 files in other folders)
